// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Message component should NOT render <Message /> 1`] = `null`;

exports[`Message component should render <Message /> and compare with snapshot 1`] = `
<View>
  <View
    style={
      [
        {
          "alignItems": "flex-end",
          "flexDirection": "row",
          "justifyContent": "flex-start",
          "marginLeft": 8,
          "maxWidth": "80%",
        },
        {
          "marginBottom": 10,
        },
        {
          "marginBottom": 2,
        },
        undefined,
      ]
    }
  >
    <View
      style={
        [
          {
            "alignItems": "flex-start",
          },
          undefined,
        ]
      }
    >
      <View
        style={
          [
            {
              "backgroundColor": "#f0f0f0",
              "borderRadius": 15,
              "justifyContent": "flex-end",
              "minHeight": 20,
            },
            null,
            null,
            undefined,
          ]
        }
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
        >
          <View
            style={
              [
                {
                  "marginHorizontal": 10,
                  "marginVertical": 5,
                },
                undefined,
              ]
            }
          >
            <Text
              style={
                [
                  {
                    "color": "black",
                  },
                  undefined,
                  undefined,
                ]
              }
              user={
                {
                  "_id": 1,
                }
              }
            >
              <Text>
                test
              </Text>
            </Text>
          </View>
          <View
            style={
              [
                {
                  "flexDirection": "row",
                  "justifyContent": "flex-start",
                  "paddingHorizontal": 10,
                },
                undefined,
              ]
            }
          >
            <View>
              <Text
                style={
                  [
                    {
                      "color": "#aaa",
                      "fontSize": 10,
                      "textAlign": "right",
                    },
                    undefined,
                  ]
                }
              >
                7:20 PM
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`Message component should render <Message /> with Avatar 1`] = `
<View>
  <View
    style={
      [
        {
          "alignItems": "flex-end",
          "flexDirection": "row",
          "justifyContent": "flex-start",
          "marginLeft": 8,
          "maxWidth": "80%",
        },
        {
          "marginBottom": 10,
        },
        {
          "marginBottom": 2,
        },
        undefined,
      ]
    }
  >
    <View
      style={
        [
          {
            "marginRight": 8,
          },
          undefined,
          undefined,
        ]
      }
    >
      <View
        accessibilityRole="image"
        style={
          [
            {
              "alignItems": "center",
              "justifyContent": "center",
            },
            {
              "borderRadius": 20,
              "height": 40,
              "width": 40,
            },
            {
              "backgroundColor": "transparent",
            },
            [
              {
                "borderRadius": 18,
                "height": 36,
                "width": 36,
              },
              undefined,
            ],
          ]
        }
      />
    </View>
    <View
      style={
        [
          {
            "alignItems": "flex-start",
          },
          undefined,
        ]
      }
    >
      <View
        style={
          [
            {
              "backgroundColor": "#f0f0f0",
              "borderRadius": 15,
              "justifyContent": "flex-end",
              "minHeight": 20,
            },
            null,
            null,
            undefined,
          ]
        }
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
        >
          <View
            style={
              [
                {
                  "marginHorizontal": 10,
                  "marginVertical": 5,
                },
                undefined,
              ]
            }
          >
            <Text
              isUserAvatarVisible={true}
              style={
                [
                  {
                    "color": "black",
                  },
                  undefined,
                  undefined,
                ]
              }
              user={
                {
                  "_id": 1,
                }
              }
            >
              <Text>
                test
              </Text>
            </Text>
          </View>
          <View
            style={
              [
                {
                  "flexDirection": "row",
                  "justifyContent": "flex-start",
                  "paddingHorizontal": 10,
                },
                undefined,
              ]
            }
          >
            <View>
              <Text
                style={
                  [
                    {
                      "color": "#aaa",
                      "fontSize": 10,
                      "textAlign": "right",
                    },
                    undefined,
                  ]
                }
              >
                12:00 AM
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`Message component should render null if user has no Avatar 1`] = `
<View>
  <View
    style={
      [
        {
          "alignItems": "flex-end",
          "flexDirection": "row",
          "justifyContent": "flex-start",
          "marginLeft": 8,
          "maxWidth": "80%",
        },
        {
          "marginBottom": 10,
        },
        {
          "marginBottom": 2,
        },
        undefined,
      ]
    }
  >
    <View
      style={
        [
          {
            "marginRight": 8,
          },
          undefined,
          undefined,
        ]
      }
    >
      <View
        accessibilityRole="image"
        style={
          [
            {
              "alignItems": "center",
              "justifyContent": "center",
            },
            {
              "borderRadius": 20,
              "height": 40,
              "width": 40,
            },
            {
              "backgroundColor": "transparent",
            },
            [
              {
                "borderRadius": 18,
                "height": 36,
                "width": 36,
              },
              undefined,
            ],
          ]
        }
      />
    </View>
    <View
      style={
        [
          {
            "alignItems": "flex-start",
          },
          undefined,
        ]
      }
    >
      <View
        style={
          [
            {
              "backgroundColor": "#f0f0f0",
              "borderRadius": 15,
              "justifyContent": "flex-end",
              "minHeight": 20,
            },
            null,
            null,
            undefined,
          ]
        }
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
        >
          <View
            style={
              [
                {
                  "marginHorizontal": 10,
                  "marginVertical": 5,
                },
                undefined,
              ]
            }
          >
            <Text
              isUserAvatarVisible={true}
              style={
                [
                  {
                    "color": "black",
                  },
                  undefined,
                  undefined,
                ]
              }
              user={
                {
                  "_id": 1,
                }
              }
            >
              <Text>
                test
              </Text>
            </Text>
          </View>
          <View
            style={
              [
                {
                  "flexDirection": "row",
                  "justifyContent": "flex-start",
                  "paddingHorizontal": 10,
                },
                undefined,
              ]
            }
          >
            <View>
              <Text
                style={
                  [
                    {
                      "color": "#aaa",
                      "fontSize": 10,
                      "textAlign": "right",
                    },
                    undefined,
                  ]
                }
              >
                12:00 AM
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;
